--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@stripe/stripe-js": "^4.6.0",
     "@t3-oss/env-nextjs": "^0.10.1",
     "@tanstack/react-query": "^5.56.2",
+    "@types/gsap": "^3.0.0",
     "axios": "^1.7.7",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -33,6 +34,7 @@
     "embla-carousel": "^8.3.0",
     "embla-carousel-react": "^8.3.0",
     "geist": "^1.3.0",
+    "gsap": "^3.12.5",
     "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.439.0",
     "next": "^14.2.4",
